@startuml Ebene3.png
hide empty members

component openhtmltopdf {
        interface FSDOMMutator {
            mutateDocument(document : org.w3c.dom.Document) : void
        }

        interface FSObjectDrawer {
            drawObject(e : org.w3c.dom.Element, x: double, y : double y, width : double , height : double, outputDevice : OutputDevice, ctx : RenderingContext, dotsPerPixel : int) : Map<Shape, String>
        }

        interface  FSObjectDrawerFactory {
            createDrawer(e : org.w3c.dom.Element) : FSObjectDrawer
            isReplacedObject(e : org.w3c.dom.Element) : boolean
        }
}

package renderer {

    class DRDFragment {
        -name : String
        -number : String
        -fragment : String
    }

    interface RendererRequestConfigurationSupplier<RendererRequestConfiguration> {
    }

    class ThymeleafTemplateEngine {
        templateEngine : ITemplateEngine
    }
    ThymeleafTemplateEngine --> "1" RendererRequestConfigurationSupplier : supplier
    HTMLTemplateEngine <|.. ThymeleafTemplateEngine

    class TailoringexpertDOMMutator {
    }
    FSDOMMutator <|.. TailoringexpertDOMMutator

    class WatermarkDrawer {
        {static} font: Font
        {static} getWatermarkFont()  : Font
    }
    FSObjectDrawer <|.. WatermarkDrawer 

    class PDFEngine {
        baseUri : String
        process(docId : String, html : String, pfadSuffix : String) :  File
    }
    PDFEngine --> "1" TailoringexpertDOMMutator : domMutator
    PDFEngine --> "1" FSObjectDrawerFactory : drawerFactory
    PDFEngine --> "1" RendererRequestConfigurationSupplier : supplier

    
}
@enduml
